fix(report): avoid visible borders on headings (#2085)

--- a/src/reporter/test-report-base.css
+++ b/src/reporter/test-report-base.css
@@ -102,7 +102,7 @@ code {
 /* this is to make Navigator fill the entire line */
 h1,
 h2 {
-	border: 1px solid white;
+	border: 0px solid white;
 	width: auto;
 }
 
